--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ egui = "0.31.1"
 rand = "0.9.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_derive = "1.0.219"
+
+[target.'cfg(windows)']
+rustflags = ["-C", "link-args=/SUBSYSTEM:windows"]
